--- a/Day 6.ipynb
+++ b/Day 6.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "continuation with a datatype :"
+    "continuation with listdatatype :"
    ]
   },
   {
