--- a/Day 7.ipynb
+++ b/Day 7.ipynb
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "note : give the key get the key the value"
+    "note : give the key and get the value"
    ]
   },
   {
