--- a/Day 7.ipynb
+++ b/Day 7.ipynb
@@ -328,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "note : keys wii be acting as a index point in the dictionary "
+    "note : keys will be acting as a index point in the dictionary "
    ]
   },
   {
